# AgelClaw

./: .env.example  .gitignore  ARCHITECTURE_PLAN.md  CLAUDE.md  README.md  agent_config.py  api_server.py  build_release.py  cli.py  daemon_v2.py  ecosystem.config.js  install.bat  install.py  launcher.py  mem_cli.py  memory.py  memory_tools.py  pyproject.toml  requirements.txt  setup_wizard.py  skill_tools.py  start.bat  start.sh  telegram_bot.py
.github/workflows/: build-release.yml
aclaude/: CLAUDE.md  ecosystem.config.js  weather_email_template.py
aclaude/Book_for_Agentic/: generate_book_en.js
aclaude/proactive/: .agelclaw  .gitignore  ARCHITECTURE_PLAN.md  CLAUDE.md  INSTALLER_GUIDE_SIMPLE.md  INSTALLER_MANUAL.md  LICENSE  MANUAL.md  build_installer.py  build_installer_linux.py  build_release.py  ecosystem.config.js  install-linux.sh  installer.iss  pyproject.toml
aclaude/timologia/: ecosystem.config.js  nginx.conf  sql.md
agent_wrappers/: __init__.py  base_agent.py  claude_agent.py  openai_agent.py  openai_tools.py
core/: agent_router.py  config.py  subagent_manager.py
examples/telegram_bot/: README.md  run.py
react-claude-chat/: index.html  package.json  tailwind.config.js  vite.config.ts
react-claude-chat/src/: App.tsx  index.css  types.ts
skills/claude-sdk-subagents/: SKILL.md
skills/list-directory/: SKILL.md
skills/mcp-server-creator/: SKILL.md
skills/openai-agents-sdk/: SKILL.md
skills/pdf/: SKILL.md  forms.md
skills/pptx/: html2pptx.md  ooxml.md
skills/react-chat-ui/: SKILL.md
skills/skill-creator/: SKILL.md
(+215 files in other folders)
